--- a/Company.Hossam.PL/Views/_ViewImports.cshtml
+++ b/Company.Hossam.PL/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Company.Hossam.PL
 @using Company.Hossam.PL.Models
 @using Company.Hossam.DAL.Model
+@using Company.Hossam.PL.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
