--- a/Company.Hossam.PL/Views/Department/Index.cshtml
+++ b/Company.Hossam.PL/Views/Department/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Departments>
+﻿@model IEnumerable<DepartmentViewModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,7 +13,7 @@
 
 @if(Model.Count()>0)
 {
-    <table class="table table-striped table-hover">
+    <table class="table table-striped table-hover text-center">
 
         <thead>
             <tr>
