--- a/Company.Hossam.PL/Views/Employee/Index.cshtml
+++ b/Company.Hossam.PL/Views/Employee/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Employees>
+﻿@model IEnumerable<EmployeeViewModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -7,13 +7,25 @@
 <h1>All Employees</h1>
 
 
+<form  asp-action="Index">
+    <div class="row">
+
+        <div class="col-md-8">
+            <input type="type" name="searchInput" value="" placeholder="Search by Name" class="form-control" />
+        </div>
+        <div class="col-md-4">
+            <input class="btn btn-success" value="Search" type="submit"/>
+        </div>
+    </div>
+
+</form>
 
 <a asp-controller="Employee" asp-action="Create" class="my-5 btn btn-primary">Add Employee</a>
 
 
 @if (Model.Count() > 0)
 {
-    <table class="table table-striped table-hover">
+    <table class="table table-striped table-hover text-center">
 
         <thead>
             <tr>
