--- a/Company.Hossam.PL/Views/Employee/Create.cshtml
+++ b/Company.Hossam.PL/Views/Employee/Create.cshtml
@@ -9,9 +9,18 @@
 <hr />
 <div class="row my-3">
     <div class="col-md-12">
-        <form class=" form-control " method="post" asp-controller="Employee" asp-action="Create">
+        <form class=" form-control " method="post" asp-controller="Employee" asp-action="Create" enctype="multipart/form-data">
             
             <partial name="CreateUpdatePartialViewEmployee" model="Model" />
+
+
+            <div class="form-group my-3">
+                <label asp-for="Image" class="control-label"></label>
+                <input type="file" asp-for="Image" class="form-control" />
+                <span asp-validation-for="Image" class="text-danger"></span>
+                
+            </div>
+
 
             <div class="form-group my-3">
                 <input type="submit" value="Create" class="btn btn-success" />
