--- a/Company.Hossam.PL/Views/Account/SignUp.cshtml
+++ b/Company.Hossam.PL/Views/Account/SignUp.cshtml
@@ -7,23 +7,46 @@
 
 
 <div class="main-agileinfo">
-	<div class="agileits-top">
-		<form asp-action="SignUp" method="post">
-			<input class="text"  asp-for="UserName" placeholder="Username" required="">
-			<input class="text email"  asp-for="Email" placeholder="Email" required="">
-			<input class="text"  asp-for="Password" placeholder="Password" required="">
-			<input class="text w3lpass"  asp-for="ConfirmPassword"  placeholder="Confirm Password" required="">
-			<div class="wthree-text">
-				<label class="anim">
-					<input type="checkbox" asp-for="IsAgree" class="checkbox" required="">
-					<span>I Agree To The Terms & Conditions</span>
-				</label>
-				<div class="clear"> </div>
-			</div>
-			<input type="submit" value="SIGNUP">
-		</form>
-		<p>Don't have an Account? <a href="#"> Login Now!</a></p>
-	</div>
+    <div class="agileits-top">
+        <form asp-controller="Account" asp-action="SignUp" method="post">
+            <span asp-validation-for="UserName" class="text-danger"></span>
+            <input asp-for="UserName" placeholder="Username">
+
+
+            <span asp-validation-for="FirstName" class="text-danger"></span>
+            <input asp-for="FirstName" placeholder="First_Name">
+
+
+            <span asp-validation-for="LastName" class="text-danger"></span>
+            <input asp-for="LastName" placeholder="Last_Name">
+
+
+            <span asp-validation-for="Email" class="text-danger"></span>
+            <input asp-for="Email" placeholder="Email">
+
+            <span asp-validation-for="Password" class="text-danger"></span>
+            <input asp-for="Password" placeholder="Password">
+
+
+            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            <input class=" w3lpass" asp-for="ConfirmPassword" placeholder="Confirm Password">
+
+            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+            <input asp-for="PhoneNumber" placeholder="PhoneNumber">
+
+            <div class="wthree-text">
+                <label class="anim">
+                    <input type="checkbox" asp-for="IsAgree" class="checkbox" required="">
+                    <span>I Agree To The Terms & Conditions</span>
+                    <span asp-validation-for="IsAgree" class="text-danger"></span>
+
+                </label>
+                <div class="clear"> </div>
+            </div>
+            <input type="submit" value="SIGNUP">
+        </form>
+        <p>I have an Account? <a asp-action="SignIn"> Login Now!</a></p>
+    </div>
 </div>
 
 
