--- a/Company.Hossam.PL/Views/Shared/_AuthLayout.cshtml
+++ b/Company.Hossam.PL/Views/Shared/_AuthLayout.cshtml
@@ -2,11 +2,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Creative Colorlib SignUp Form</title>
+	<title> SignUp Form</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<!-- Custom Theme files -->
+	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+
 	<link href="~/css/AuthStyleSheet.css" rel="stylesheet" type="text/css" media="all" />
 	<!-- //Custom Theme files -->
 	<!-- web font -->
