--- a/Company.Hossam.PL/wwwroot/css/AuthStyleSheet.css
+++ b/Company.Hossam.PL/wwwroot/css/AuthStyleSheet.css
@@ -761,3 +761,26 @@ input.checkbox {
         padding: 1em 0 0;
     }
 }
+
+
+input[type="text"], input[type="email"], input[type="password"], input[type="tel"] {
+    color: #fff;
+    font-weight: 100;
+    width: 94.5%;
+    display: block;
+    border: none;
+    padding: 0.8em;
+    border: solid 1px rgba(255, 255, 255, 0.37);
+    -webkit-transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
+    transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
+    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 96%, #fff 4%);
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 96%, #fff 4%);
+    background-position: -800px 0;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    margin: 1.5% 0% 4% 0%;
+}
+
+
