--- a/Company.Hossam.PL/Views/Shared/_Layout.cshtml
+++ b/Company.Hossam.PL/Views/Shared/_Layout.cshtml
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Company.Hossam.PL</a>
+                <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">Company.Hossam.PL</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,16 +20,21 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Department" asp-action="index">Department</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Department" asp-action="index">Department</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="index">Employee</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Employee" asp-action="index">Employee</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav flex-grow-1 ">
+                        <li class="nav-item ms-auto">
+                            <a class="nav-link text-white btn btn-danger" asp-area="" asp-controller="Account" asp-action="SignOut">LogOut</a>
                         </li>
                     </ul>
                 </div>
