--- a/Company.Hossam.PL/Views/Account/SignIn.cshtml
+++ b/Company.Hossam.PL/Views/Account/SignIn.cshtml
@@ -5,6 +5,8 @@
     Layout = "~/Views/Shared/_AuthLayout.cshtml";
 }
 
+<h1> SignIn Form</h1>
+
 
 <div class="main-agileinfo">
 <div class="agileits-top">
@@ -29,5 +31,9 @@
         <input type="submit" value="Log In">
     </form>
     <p>Don't have an Account? <a asp-action="SignUp"> Register Now!</a></p>
-</div>
+    <div class="text-center mt-2">
+            <p> <a asp-action="ForgetPassword"> Forget Password ?</a></p>
+
+    
+    </div>
 </div>
