Add User and Roles Controllers

--- a/Company.Hossam.PL/Views/Shared/_AuthLayout.cshtml
+++ b/Company.Hossam.PL/Views/Shared/_AuthLayout.cshtml
@@ -40,5 +40,12 @@
 		</ul>
 	</div>
 	<!-- //main -->
+
+	<script src="~/lib/jquery/dist/jquery.min.js"></script>
+	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="~/js/site.js" asp-append-version="true"></script>
+	@await RenderSectionAsync("Validation", required: false)
 </body>
+
+
 </html>
