--- a/Company.Hossam.PL/Views/Shared/_Layout.cshtml
+++ b/Company.Hossam.PL/Views/Shared/_Layout.cshtml
@@ -26,10 +26,16 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Department" asp-action="index">Department</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Department" asp-action="Index">Department</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Employee" asp-action="index">Employee</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Employee" asp-action="Index">Employee</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="User" asp-action="Index">Users</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Roles" asp-action="Index">Roles</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav flex-grow-1 ">
