--- a/Company.Hossam.PL/Views/Employee/Index.cshtml
+++ b/Company.Hossam.PL/Views/Employee/Index.cshtml
@@ -11,7 +11,7 @@
     <div class="row">
 
         <div class="col-md-8">
-            <input type="type" name="searchInput" value="" placeholder="Search by Name" class="form-control" />
+            <input type="text" name="searchInput" value="" placeholder="Search by Name" class="form-control" />
         </div>
         <div class="col-md-4">
             <input class="btn btn-success" value="Search" type="submit"/>
