--- a/Company.Hossam.PL/Views/User/Index.cshtml
+++ b/Company.Hossam.PL/Views/User/Index.cshtml
@@ -22,7 +22,7 @@
 
 
 
-@if (Model.Count() > 0)
+@if (@Model.Count() > 0)
 {
     <table class="table table-striped table-hover text-center mt-5">
 
